--- a/szabalyozok/templates/szabalyozok/riport_api_layout.html
+++ b/szabalyozok/templates/szabalyozok/riport_api_layout.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="hu">
 <head>
     <meta charset="UTF-8"/>
@@ -6,12 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load staticfiles %}
-    <link rel="stylesheet" type="text/css" href="{% static 'szabalyozok/content/bootstrap.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'szabalyozok/content/bootstrap.min.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'szabalyozok/content/style.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'szabalyozok/content/datepicker.css' %}"/>
-    <script src="{% static 'szabalyozok/scripts/modernizr-2.6.2.js' %}"></script>
-    <script src="{% static 'szabalyozok/scripts/jquery-1.12.1.min.js' %}"></script>
     <link rel="icon" type="image/x-icon" href="{% static 'szabalyozok/images/favicon.ico' %}"/>
+    <script src="{% static 'szabalyozok/scripts/jquery-3.1.1.min.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'szabalyozok/content/dx.spa.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'szabalyozok/content/dx.common.css' %}"/>
+    <link rel="dx-theme" data-theme="generic.light" href="{% static 'szabalyozok/content/dx.light.css' %}"/>
+    <script src="{% static 'szabalyozok/scripts/jszip.min.js' %}"></script>
+    <script src="{% static 'szabalyozok/scripts/dx.all.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'szabalyozok/content/styles_api.css' %}"/>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -27,13 +31,13 @@
                        aria-expanded="false">Menü<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="{% url 'szabalyozok' %}">Szabályozó keresés</a></li>
-                        <li><a href="{% url 'terkep' %}" target="_blank">Szabályozó térkép</a></li>
+                        <li><a href="{% url 'terkep' %} " target="_blank">Szabályozó térkép</a></li>
                         <li role="separator" class="divider"></li>
                         {% if user.is_authenticated %}
                             <li><a href="{% url 'manometernew' %}">Manométer létrehozás</a></li>
-                            <li role="separator" class="divider"></li>
+                        <li role="separator" class="divider"></li>
                         {% endif %}
-                            <li><a href="/admin">Admin</a></li>
+                        <li><a href="/admin">Admin</a></li>
                         {% if user.is_authenticated %}
                             <li><a href="{% url 'change_password' %}">Jelszó módosítás</a></li>
                         {% endif %}
@@ -71,33 +75,9 @@
     </div>
 </nav>
 {% block content %}{% endblock %}
-<script src="{% static 'szabalyozok/scripts/jquery-ui.js' %}"></script>
 <script src="{% static 'szabalyozok/scripts/bootstrap.js' %}"></script>
-<script src="{% static 'szabalyozok/scripts/respond.js' %}"></script>
-<script src="{% static 'szabalyozok/scripts/lightbox.js' %}"></script>
-<script>
-  $(function() {
-    $( ".datum" ).datepicker({
-      showMonthAfterYear: true,
-      changeMonth: true,
-      changeYear: true,
-      yearRange: "1950:2050",
-      dateFormat: "yy.mm.dd.",
-      regional: "hu"
-    });
-  });
- </script>
-<script type="text/javascript">
-    $.datepicker.regional['hu'] = {
-        monthNamesShort: ['Jan', 'Feb', 'Már', 'Ápr', 'Máj', 'Jún', 'Júl', 'Aug', 'Szep', 'Okt', 'Nov', 'Dec'],
-        dayNamesShort: ['H', 'Lun', 'Mar', 'Mie', 'Jue', 'Vie', 'Sab'],
-        dayNamesMin: ['V', 'H', 'K', 'Sz', 'Cs', 'P', 'Szo'],
-        firstDay: 1
-    }
-
-    $.datepicker.setDefaults($.datepicker.regional['hu']);
-
-</script>
 {% block scripts %}{% endblock %}
 </body>
 </html>
+
+
