--- a/szabalyozok/templates/szabalyozok/riport_muszerek.html
+++ b/szabalyozok/templates/szabalyozok/riport_muszerek.html
@@ -1,96 +1,7 @@
-{% extends "szabalyozok/riport_layout.html" %}
+{% extends "szabalyozok/layout.html" %}
 
 {% block content %}
 
 <h1>Műszerek</h1>
     <br>
-
-    <table id="riport" class="table table-bordered" cellspacing="0" width="100%">
-        <thead>
-            <tr>
-                <th>Szab. állomás neve</th>
-                <th>Szerkeszt</th>
-                <th>Selejt</th>
-                <th>Terület</th>
-                <th>Üzem</th>
-                <th>Település</th>
-                <th>Műszerfajta</th>
-                <th>Gyártó</th>
-                <th>Típus</th>
-                <th>Elhelyezkedés</th>
-                <th>Gyáriszám</th>
-                <th>Gyártás éve</th>
-                <th>Méréshatár 1</th>
-                <th>Méréshatár 2</th>
-                <th>Osztálypontosság</th>
-                <th>Metrológia</th>
-                <th>Kalib.ciklusidő</th>
-                <th>Kalib.dátum</th>
-                <th>Köv.kalib.dátum</th>
-                <th>Beszerelés.dátum</th>
-                <th>Jegyzőkönyv száma</th>
-                <th>Megjegyzés</th>
-                <th>Azonosító</th>
-                <th>Dokumentumok</th>
-            </tr>
-        </thead>
-        <tfoot>
-            <tr>
-                <th>Szabalyozo</th>
-                <th>Szerkeszt</th>
-                <th>Selejt</th>
-                <th>Terület</th>
-                <th>Üzem</th>
-                <th>Település</th>
-                <th>Műszerfajta</th>
-                <th>Gyártó</th>
-                <th>Típus</th>
-                <th>Elhelyezkedés</th>
-                <th>Gyáriszám</th>
-                <th>Gyártás éve</th>
-                <th>Méréshatár 1</th>
-                <th>Méréshatár 2</th>
-                <th>Osztálypontosság</th>
-                <th>Metrológia</th>
-                <th>Kalib.ciklusidő</th>
-                <th>Kalib.dátum</th>
-                <th>Köv.kalib.dátum</th>
-                <th>Beszerelés.dátum</th>
-                <th>Jegyzőkönyv szám</th>
-                <th>Megjegyzés</th>
-                <th>Azonosító</th>
-                <th>Dokumentumok</th>
-            </tr>
-        </tfoot>
-        <tbody>
-            {% for muszer in muszerek %}
-                <tr>
-                    <td>{% if muszer.allomas_nev %} <a href="{% url 'szabtart_show' pk=muszer.szab_id %}">{{muszer.allomas_nev}}</a> {% endif %}</td>
-                    <td> {% if muszer.mf_id == 1 %} <a href="{% url 'manometer_edit' pk=muszer.m_id %}">Szerkeszt</a> {% endif %} </td>
-                    <td> {% if muszer.selejt  %}Igen{% else %}Nem{% endif %}</td>
-                    <td>{% if muszer.allomas_nev %}{{ muszer.terulet }}{% endif %}</td>
-                    <td>{% if muszer.allomas_nev %}{{ muszer.uzem }}{% endif %}</td>
-                    <td>{% if muszer.allomas_nev %}{{ muszer.telepules }}{% endif %}</td>
-                    <td>{{ muszer.muszerfajta }}</td>
-                    <td>{{ muszer.muszergyarto }}</td>
-                    <td>{{ muszer.muszertipus }}</td>
-                    <td>{{ muszer.elhelyezkedes }}</td>
-                    <td>{{ muszer.gyariszam }}</td>
-                    <td>{{ muszer.gyartas_ev }}</td>
-                    <td>{{ muszer.mereshatar1 }}</td>
-                    <td>{{ muszer.mereshatar2 }}</td>
-                    <td>{{ muszer.osztalypontossag }}</td>
-                    <td>{{ muszer.metrologia }}</td>
-                    <td>{{ muszer.kalib_ciklusido }}</td>
-                    <td>{{ muszer.kalib_datum }}</td>
-                    <td>{{ muszer.kov_kalib_datum }}</td>
-                    <td>{{ muszer.beszereles_datum }}</td>
-                    <td>{{ muszer.jegyzokonyv_szam }}</td>
-                    <td>{{ muszer.megjegyzes }}</td>
-                    <td>{{ muszer.id }}</td>
-                    <td><a href="{% url 'simple_doc_list' tip='muszer' eszid=muszer.id %}">Dokumentumok</a></td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
 {% endblock %}
