--- a/szabalyozok/templates/szabalyozok/riport_szabalyozok.html
+++ b/szabalyozok/templates/szabalyozok/riport_szabalyozok.html
@@ -137,7 +137,7 @@
         <td>{% if szab.nyom_din_rendszer %}igen{% else %}nem{% endif %}</td>
         <td>{% if szab.futott %}igen{% else %}nem{% endif %}</td>
         <td>{{ szab.rb_zona }}</td>
-        <td>{% if szab.nyom_din_rendszer %}igen{% else %}nem{% endif %}</td>
+        <td>{% if szab.felugyeleti_rendszer %}igen{% else %}nem{% endif %}</td>
         <td>{{ szab.villamvedelem }}</td>
         <td>{{ szab.villamvedelem_ev }}</td>
         <td>{{ szab.villamvedelem_kov_ev }}</td>
