--- a/szabalyozok/templates/szabalyozok/szabalyozo_edit.html
+++ b/szabalyozok/templates/szabalyozok/szabalyozo_edit.html
@@ -189,6 +189,11 @@
                     {{ form.villamvedelem_kov_ev.errors }}
                     {{ form.villamvedelem_kov_ev|add_class:"form-control" }}
                 </div>
+                <div class="form-group">
+                     {{ form.villamvedelem_szint.label_tag }}
+                    {{ form.villamvedelem_szint.errors }}
+                    {{ form.villamvedelem_szint|add_class:"form-control" }}
+                </div>
                <div class="form-group">
                     {{ form.szabkarb.label_tag }}
                     {{ form.szabkarb.errors }}
