--- a/szabalyozok/templates/szabalyozok/riport_layout.html
+++ b/szabalyozok/templates/szabalyozok/riport_layout.html
@@ -55,16 +55,23 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Riportok<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{% url 'riport_szabalyozok' %}">Szabályozók</a></li>
+                    <!--    <li><a href="{% url 'riport_szabalyozok' %}">Szabályozók</a></li>
                         <li><a href="{% url 'riport_szabtartozekok' %}">Szab. tartozékok</a></li>
                         <li><a href="{% url 'riport_muszerek' %}">Műszerek</a></li>
                         <li><a href="{% url 'riport_diagnosztika' %}">Diagnosztikák</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="{% url 'riport_szabmunkak' %}">Szabályozó munkák</a></li>
                         <li><a href="{% url 'riport_muszermunkak' %}">Műszer munkák</a></li>
+                        <li role="separator" class="divider"></li> -->
+                        <li><a href="{% url 'riport_szabalyozok_api' %}">Szabályozók riport</a></li>
+                        <li><a href="{% url 'riport_szabtartozekok_api' %}">Tartozékok riport</a></li>
+                        <li><a href="{% url 'riport_muszerek_api' %}">Műszerek riport</a></li>
+                        <li><a href="{% url 'riport_diagnosztika_api' %}">Beszabályozások riport</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="{% url 'api_szabalyozok' %}">Új szab. riport</a></li>
-                        <li><a href="{% url 'api_tartozekok' %}">Új tartozékok riport</a></li>
+                        <li><a href="{% url 'riport_szabmunkak_api' %}">Szabályozó munkák riport</a></li>
+                        <li><a href="{% url 'riport_muszermunkak_api' %}">Műszer munkák riport</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="{% url 'riport_dokumentumfilter' %}">Dokumentumok riport</a></li>
                     </ul>
                 </li>
                 {% endif %}
@@ -135,7 +142,7 @@
                     }
                 });
             });
-
+        /* Gombok kikapcsolva
             new $.fn.dataTable.Buttons(table, {
                 buttons: [
                     'excel','csv',
@@ -144,6 +151,7 @@
             });
             table.buttons().container()
                     .appendTo($('.dataTables_filter:eq(0)', table.table().container()));
+        */
 
             $('#riport tbody').on('click', 'tr', function () {
                 var id = this.id;
